[package]
name = "input-data"
version = "0.1.0"
edition = "2021"

[dependencies]
input-data-methods = { path = "methods" }
input-data-core = { path = "core" }

anyhow = "1.0"
bincode = "1.3"
clap = "4.4"
hex = "0.4"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
risc0-zkvm = { version = "1.0.1" }
env_logger = "0.11.3"
serde = "1.0"
csv = "1.1"
base64 = "0.22.0"

[features]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]