[package]
name = "risc0-merkle"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
divrem = "1.0"
elsa = "1.7"
merkle_light = "0.4"
merkle_light_derive = "0.4"
# risc0-zkvm = { version = "0.21.0", default-features = false }
serde = "1.0"
ethers = { version = "2.0.14" }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
